# win-gui-inspector

./: .gitignore  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: cli-reference.md  index.md  workflow-guide.md
src/win_gui_inspector/: __init__.py  __main__.py  cli.py  inspector.py  mapper.py
tests/: conftest.py  test_cli.py  test_inspector.py  test_mapper.py
